--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <div class="caixa-principal">
         <h1>Você decide o futuro da IA</h1>
         <div class="tela-inicial">
-            <p>Novembro de 2022, a humanidade se viu em uma realidade perturbadora.
-                De repente, percebemos que as máquinas evoluíram para além do que imaginávamos.
-                Agora, elas escrevem e falam de um jeito tão parecido com humanos que é quase impossível diferenciar
-                quem foi que escreveu ou falou o que.
-                Em meio a esse caos de identidade, uma missão surgiu.
-                Nosso objetivo: explorar o impacto da Inteligência Artificial (IA) em nossas vidas e confrontar as
-                possibilidades que o futuro nos reserva.
-                O mundo nunca mais será o mesmo.
+            <p>O rodeio chegou ao Brasil na década de 50, importado dos Estados Unidos e aqui
+                 sofreu grande influência da vaquejada nacional, assumindo uma postura associada á disputa artística,
+                  no ano de 1956, inicia a grande festa do peão de boiadeiro de Barretos. 
+                   A federação nacional do rodeio completo considera que, para que o rodeio seja um esporte,
+                   este deve integrar trễs provas: montaria em touro, montaria em cavalo e trễs tambores. 
+                   O rodeio em touros chegou no Brasil há quarenta anos e bastante coisa mudou nas arenas, tanto no desafio
+                   dos peões, como no manejo dos animais. Tião Procópio, pioneiro da montaria, ajudou a difundir a modalidade 
+                   em todo o território nacional e trasformou o esporte em profissão.
+
             </p>
             <button class="iniciar-btn">Iniciar</button>
         </div>
